--- a/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
+++ b/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
@@ -9,7 +9,9 @@
   justify-content: space-between;
   min-height: 390px;
   min-width: 350px;
-  padding: 0 !important;
+  padding-top: 0px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
   .player-area {
     display: flex;
 
