--- a/front_end/src/Components/Main/VerifyEmailNote/VerifyEmailNote.scss
+++ b/front_end/src/Components/Main/VerifyEmailNote/VerifyEmailNote.scss
@@ -26,6 +26,9 @@
   a {
     font-family: "Montserrat-Bold";
     color: #e6912c;
+    &:hover {
+      color: #0056b3;
+    }
   }
   p {
     margin-bottom: 1.5rem;
