--- a/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
+++ b/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
@@ -10,8 +10,8 @@
     position: absolute;
     color: #312e2b;
     z-index: 1000;
-    right: 0.4rem;
-    top: 0.6rem;
+    right: 1%;
+    top: 3%;
   }
   ul {
     position: relative;
