--- a/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
+++ b/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
@@ -1,5 +1,4 @@
 .chat-section {
-  margin-top: 17px;
   position: relative;
   width: 100%;
   height: 40%;
@@ -22,7 +21,8 @@
     padding-left: 5px;
     list-style: none;
     height: 100%;
-    min-height: 150px;
+    min-height: 172px;
+    max-height: 190px;
     scrollbar-color: rgba(0, 0, 0, 0.45) transparent;
     scrollbar-width: thin;
     .announce-new-game {
