--- a/front_end/src/Components/Main/NavBar/Invites/Invites.scss
+++ b/front_end/src/Components/Main/NavBar/Invites/Invites.scss
@@ -10,11 +10,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: white;
     margin-top: 17px;
     padding: 10px;
     .image-container {
-      width: 2.2rem;
+      width: 2.5rem;
       img {
         width: 100%;
       }
@@ -22,8 +22,7 @@
     .name-and-btn-container {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      border: solid;
+
       p {
         span {
           font-family: "Montserrat-Bold";
@@ -31,8 +30,33 @@
         text-align: left;
         font-family: "Montserrat-Regular";
         font-size: 1rem;
-        color: rgba(255, 255, 255, 0.65);
+        color: black;
         padding-left: 5px;
+        margin-bottom: 3px;
+      }
+      .btn-container {
+        display: flex;
+        justify-content: space-around;
+
+        .accept-invite {
+          background-color: #dbd9d7;
+          color: #666463;
+          padding: 7px !important;
+          font-size: 0.9rem;
+          &:hover {
+            background-color: #bfbeba;
+            color: #666463;
+          }
+        }
+        .decline-invite {
+          padding: 7px !important;
+          background-color: #e6912c;
+          color: white;
+          font-size: 0.9rem;
+          &:hover {
+            background-color: #d37e19;
+          }
+        }
       }
     }
   }
