--- a/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
+++ b/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
@@ -52,7 +52,7 @@
         margin-left: 7px;
         max-width: 110px;
         min-width: 83px;
-        // max-height: 27px;
+        max-height: 27px;
         overflow: auto;
         scrollbar-color: rgba(0, 0, 0, 0.45) transparent;
         scrollbar-width: thin;
