--- a/front_end/src/Components/Main/VerifyEmailNote/VerifyEmailNote.scss
+++ b/front_end/src/Components/Main/VerifyEmailNote/VerifyEmailNote.scss
@@ -20,8 +20,8 @@
     position: absolute;
     color: #312e2b;
     z-index: 1000;
-    right: 0.4rem;
-    top: 0.6rem;
+    right: 0%;
+    top: 3%;
   }
   a {
     font-family: "Montserrat-Bold";
