--- a/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
+++ b/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
@@ -140,9 +140,8 @@
         cursor: pointer;
       }
       .link {
-        border: 1px solid #dbd9d7;
+        border: 1px solid #312e2b;
         padding: 5px 8px 5px 8px;
-
         outline: none;
         color: #312e2b;
         font-family: "Montserrat-Regular";
