--- a/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
+++ b/front_end/src/Components/Main/Game/GamePlayArea/GamePlayArea.scss
@@ -52,11 +52,15 @@
         margin-left: 7px;
         max-width: 110px;
         min-width: 83px;
-        max-height: 27px;
-        overflow: auto;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         scrollbar-color: rgba(0, 0, 0, 0.45) transparent;
         scrollbar-width: thin;
       }
     }
   }
+}
+#name-tooltip {
+  font-size: 0.93rem;
 }
