--- a/front_end/src/index.scss
+++ b/front_end/src/index.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-
+@import "~bootstrap/scss/bootstrap.scss";
 html {
   height: 100%;
   font-size: 100%;
