--- a/front_end/src/Components/Home/Home.scss
+++ b/front_end/src/Components/Home/Home.scss
@@ -24,9 +24,11 @@
   }
 
   .find-players-container {
+    min-width: 275px;
     @media screen and (max-width: 768px) {
       & {
         margin-top: 15px;
+        margin-bottom: 20px;
       }
     }
   }
