--- a/front_end/src/Components/SignIn/SignIn.scss
+++ b/front_end/src/Components/SignIn/SignIn.scss
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: "Montserrat-Bold";
-  src: url("../../Fonts/Montserrat-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Montserrat-Regular";
-  src: url("../../Fonts/Montserrat-Regular.ttf");
-}
 .container-fluid {
   font-family: "Montserrat-Bold";
   text-align: center;
@@ -27,108 +18,118 @@
       padding: 0;
       min-width: 250px;
       max-width: 436px;
-      form {
-        width: 100%;
-        padding: 15px;
-        input {
-          font-family: "Montserrat-Regular";
-          &:focus {
-            border-color: #a7a6a2 !important;
-            border-width: 2px !important;
-            box-shadow: none;
-          }
-          &::placeholder {
-            font-size: 12px;
-          }
-        }
-        button {
-          background-color: #7fa650;
-          width: 100%;
-          border: none;
-          padding-top: 15px;
-          padding-bottom: 15px;
-          &:hover {
-            background-color: #95bb4a !important;
-          }
-        }
-        .log-in-as-guest {
-          margin-top: 15px;
-          background-color: #dbd9d7;
-          color: #666463;
-          &:hover {
-            background-color: #e7e6e4 !important;
-            color: #545150 !important;
-          }
-        }
-        .form-label {
-          font-family: "Montserrat-Regular";
-          color: #666463;
-          font-weight: bold;
-          font-size: 15px;
-        }
-      }
-      .seperator {
-        width: 100%;
-        padding-left: 15px;
-        padding-right: 15px;
-        display: flex;
-        align-items: center;
-        font-family: "Montserrat-Regular";
-        font-size: 0.9rem;
-        color: #666463;
-        & > :first-child,
-        & > :last-child {
-          background-color: #dbd9d7;
-          height: 0.1rem;
-          flex-grow: 1;
-        }
-        .seperator-text {
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
-      .social-login {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
-        margin-bottom: 7px;
-        font-size: 20px;
-        padding-left: 17px;
-        .google {
-          color: #db4437;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-        .facebook {
-          color: #4794f5;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-        .github {
-          color: #4c4843;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-      .sign-up-area {
-        background-color: #f1f1f1;
-        text-align: center;
-        width: 100%;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        a {
-          font-family: "Montserrat-Regular";
-          color: #005e94;
-          font-size: 14px;
-          &:hover {
-            color: #e6912c;
-          }
-        }
-      }
+    }
+  }
+}
+
+form {
+  width: 100%;
+  padding: 15px;
+
+  input {
+    font-family: "Montserrat-Regular";
+    &:focus {
+      border-color: #a7a6a2 !important;
+      border-width: 2px !important;
+      box-shadow: none !important;
+    }
+    &::placeholder {
+      font-size: 12px;
+    }
+  }
+  .submit-form-button {
+    background-color: #7fa650 !important;
+    width: 100%;
+    border: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    &:hover {
+      background-color: #95bb4a !important;
+    }
+  }
+  .log-in-as-guest {
+    width: 100%;
+    margin-top: 15px;
+    background-color: #dbd9d7 !important;
+    color: #666463;
+    &:hover {
+      background-color: #e7e6e4 !important;
+      color: #545150 !important;
+    }
+  }
+
+  .form-label {
+    font-family: "Montserrat-Regular";
+    color: #666463;
+    font-weight: bold;
+    float: left;
+    text-align: left;
+    font-size: 15px;
+  }
+
+  .invalid-feedback {
+    text-align: left;
+  }
+}
+.seperator {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  align-items: center;
+  font-family: "Montserrat-Regular";
+  font-size: 0.9rem;
+  color: #666463;
+  & > :first-child,
+  & > :last-child {
+    background-color: #dbd9d7;
+    height: 0.1rem;
+    flex-grow: 1;
+  }
+  .seperator-text {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+.social-login {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 7px;
+  font-size: 20px;
+  padding-left: 17px;
+  .google {
+    color: #db4437;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  .facebook {
+    color: #4794f5;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  .github {
+    color: #4c4843;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+.sign-up-area {
+  background-color: #f1f1f1;
+  text-align: center;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  a {
+    font-family: "Montserrat-Regular";
+    color: #005e94;
+    font-size: 14px;
+    &:hover {
+      color: #e6912c;
     }
   }
 }
