--- a/front_end/src/Components/Home/ProfileHeader/ProfileHeader.scss
+++ b/front_end/src/Components/Home/ProfileHeader/ProfileHeader.scss
@@ -3,6 +3,15 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
+
+  @media screen and (max-width: 576px) {
+    & {
+      align-items: center;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+  }
+
   .change-pic-area {
     height: 7.7rem;
     width: 7.7rem;
@@ -75,7 +84,7 @@
         font-size: 1.3rem;
         color: white;
         font-family: "Montserrat-Bold";
-        max-width: 150px;
+        max-width: 200px;
         margin: 0px;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -88,6 +97,7 @@
         font-family: "Montserrat-Regular";
         color: hsla(0, 0%, 100%, 0.65);
         word-break: break-word;
+        max-width: 200px;
         margin: 0px;
         text-align: left;
       }
@@ -111,4 +121,9 @@
       opacity: 1;
     }
   }
+}
+
+#profile-name-tooltip {
+  font-family: "Montserrat-Regular";
+  font-size: 1.1rem;
 }
