--- a/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
+++ b/front_end/src/Components/Main/Game/GameBar/ChatSection/ChatSection.scss
@@ -54,7 +54,9 @@
   .chat-input {
     flex-grow: 1;
     display: flex;
+    padding: 0 !important;
     width: 100%;
+
     input {
       word-break: break-all;
       border: none;
@@ -66,7 +68,12 @@
       &:focus {
         outline: none;
       }
+
+      &::placeholder {
+        font-size: 1.2rem;
+      }
     }
+
     .send-btn {
       width: 20%;
       font-family: "Montserrat-Bold";
