--- a/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
+++ b/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
@@ -80,15 +80,20 @@
       justify-content: space-evenly;
       align-items: center;
 
-      input {
+      #player-name-search {
         border: none;
         font-family: "Montserrat-Regular";
         font-size: 1rem;
+        line-height: 1.4;
         color: hsla(0, 0%, 100%, 0.65);
         background-color: transparent;
 
         &:focus {
           outline: none;
+        }
+
+        &::placeholder {
+          font-size: 1rem;
         }
       }
 
@@ -169,7 +174,7 @@
   top: 100%;
   padding: 0px;
   overflow: auto;
-  max-height: 23rem;
+  max-height: 14rem;
   width: 100%;
   background-color: white;
   scrollbar-color: rgba(0, 0, 0, 0.45) transparent;
