--- a/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
+++ b/front_end/src/Components/Main/Game/GameController/PlayWithFriend/PlayWithFriend.scss
@@ -200,6 +200,8 @@
       font-family: "Montserrat-Regular";
       font-size: 1rem;
       color: black;
+      max-width: 263px;
+      word-wrap: break-word;
       padding-left: 5px;
       margin: 0px;
     }
