--- a/front_end/src/Components/Settings/Settings.scss
+++ b/front_end/src/Components/Settings/Settings.scss
@@ -40,5 +40,9 @@
       font-weight: normal;
       color: #312e2b;
     }
+
+    .form-group-row {
+      justify-content: space-between !important;
+    }
   }
 }
