--- a/front_end/src/Components/Main/NavBar/Invites/Invites.scss
+++ b/front_end/src/Components/Main/NavBar/Invites/Invites.scss
@@ -16,8 +16,10 @@
     height: 5rem;
     padding: 5px;
     .image-container {
-      height: 70%;
+      width: 45px;
+      height: 45px;
       img {
+        width: 100%;
         height: 100%;
       }
     }
