--- a/front_end/src/Components/Main/Game/GamePlayArea/Pause/Pause.scss
+++ b/front_end/src/Components/Main/Game/GamePlayArea/Pause/Pause.scss
@@ -18,7 +18,7 @@
     display: flex;
     height: 17%;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     color: rgba(255, 255, 255, 0.65);
     .pause-announce {
       font-size: 1.2rem;
@@ -28,6 +28,7 @@
     .pause-timer {
       font-size: 1rem;
       margin: 0px;
+      margin-top: 7px;
       font-family: "Montserrat-Regular";
       span {
         font-family: "Montserrat-Bold";
